--- a/src/template/layout/sections/instrumentsResult.html
+++ b/src/template/layout/sections/instrumentsResult.html
@@ -111,7 +111,8 @@
                             <div class="line line-vertical"></div>
                             <div class="wrapper">Чай, кофе и сок, фрукты и овощи, сдобное и диетическое</div>
                         </div>
-                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12"> <!-- На новой строке будет 7ая колонка -->
+                        <!-- На новой строке будет 7ая колонка -->
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
                             <div class="line line-vertical"></div>
                             <div class="wrapper">Без лишних ушей. Во всем помещении только участники закрытого клуба</div>
                         </div>
@@ -146,28 +147,33 @@
                     </div>
                     <div class="row r">
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
-                            <div class="wrapper">5. БлаБлабЛА</div>
+                            <div class="wrapper">Работа на целями</div>
                         </div>
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
                             <div class="line line-vertical"></div>
-                            <div class="wrapper">5.1</div>
+                            <div class="wrapper">Рост относительно уровня нормы</div>
                         </div>
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
                             <div class="line line-vertical"></div>
-                            <div class="wrapper">5.2</div>
+                            <div class="wrapper">План-кинжал</div>
                         </div>
                         <div class="clearfix visible-md visible-sm"></div>
-                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
                             <div class="line line-vertical"></div>
-                            <div class="wrapper">5.3</div>
+                            <div class="wrapper">Отчеты перед группой</div>
                         </div>
-                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
                             <div class="line line-vertical"></div>
-                            <div class="wrapper">5.4</div>
+                            <div class="wrapper">План-плана</div>
                         </div>
-                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
                             <div class="line line-vertical"></div>
-                            <div class="wrapper">5.5</div>
+                            <div class="wrapper">Цена-слова</div>
+                        </div>
+                        <!-- На новой строке будет 7ая колонка -->
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                            <div class="line line-vertical"></div>
+                            <div class="wrapper">Метод 1-2. Исключение из клуба за бездействие</div>
                         </div>
                     </div>
                 </div>
