--- a/src/assets/style/modules/_title.scss
+++ b/src/assets/style/modules/_title.scss
@@ -7,6 +7,18 @@
     h2 {
         @extend %font-PT_Serif;
         font-size: 2.5em;
+            
+        @media only screen and (max-width: 767px) {
+            font-size: 1.5em;
+        }
+
+        @media only screen and (min-width: 768px) and (max-width: 991px) {
+            font-size: 1.8em;
+        }
+
+        @media only screen and (min-width: 992px) and (max-width: 1199px) {
+            font-size: 2.0em;
+        }
     }
 
     h3 {
