Изменения в арфографии, замена слов...

--- a/src/template/layout/sections/combustion.html
+++ b/src/template/layout/sections/combustion.html
@@ -13,11 +13,11 @@
                     <div class="txt">
                         <p>
                             Мы проведем для тебя бесплатный мастер-класс, на котором выступит один из участников клуба. <br />
-                            Выступающий – получит возможность собрать во едино его опыт в бизнесе и изложить его. <br />
+                            Выступающий – получит возможность собрать воедино его опыт в бизнесе и изложить его. <br />
                             Ты – услышишь бизнес-исповедь от человека с результатом в твоей стране, твоём городе. <br />
                             Здесь и сейчас. Или просто с пользой проведешь время.  <br />
                         </p>
-                        <p>Как только наберется 10 слушателей – мы в течении 5 дней организуем мастер-класс.</p>
+                        <p>Как только наберется 10 слушателей – мы в течение 5 дней организуем мастер-класс.</p>
                     </div>
 
                     <p class="seats">Осталось 6 мест</p>
