--- a/src/template/layout/sections/instrumentsResult.html
+++ b/src/template/layout/sections/instrumentsResult.html
@@ -68,7 +68,7 @@
                             <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 FreeTime. <br />
-                                После встречи свободное общение и дообсуждения, если необходимо.
+                                После встречи свободное общение и продолжение обсуждения по необходимости.
                             </div>
                         </div>
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
@@ -87,7 +87,7 @@
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
                             <div class="line line-vertical"></div>
                             <div class="wrapper">
-                                Время FreeTime неограничего. <br />
+                                Время FreeTime неограничено. <br />
                                 Хоть до раннего утра
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="row r">
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
-                            <div class="wrapper">Работа на целями</div>
+                            <div class="wrapper">Работа над целями</div>
                         </div>
                         <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
                             <div class="line line-vertical"></div>
@@ -186,7 +186,7 @@
                     <div class="txt">
                         <p>
                             В этом окружении стыдно быть без результата или плавать на том же уровне, с которым ты пришел сюда. <br />
-                            Но не отчаивайся. Если ты не будешь достигать поставленные цели, то тебя исключат из клуба. <br />
+                            Но не отчаивайся. Если ты не будешь достигать поставленных цели, то тебя исключат из клуба. <br />
                             Тебе не придется отчитываться и ты сможешь жить как все, в своём уютном мире.
                         </p>
                     </div>
