--- a/src/template/layout/sections/clubProgram.html
+++ b/src/template/layout/sections/clubProgram.html
@@ -28,14 +28,14 @@
             <div class="col-sm-6 col-md-6 col-lg-5">
                 <div class="prgBlock prgBlock-second">
                     <div class="title">
-                        <h3>Желающие, принимают участие:</h3>
+                        <h3>Желающие принимают участие:</h3>
                     </div>
 
                     <div class="content">
                         <h4>Командный бизнес</h4>
 
                         <div>
-                            <p>Те участники клубов, кто помимо основного бизнеса, открыты для новых проектов.</p>
+                            <p>Те участники клубов, кто помимо основного бизнеса открыты для новых проектов.</p>
                             <p>Формируется отдельная группа в дополнительный день. </p>
                             <p>Цель: создать новый бизнес.</p>
                             <p>Инструменты: распределяется работа, вложения, формируется команда, оформляется договор и участники начинают совместную кампанию.</p>
@@ -75,8 +75,8 @@
                             <li>
                                 Активный отдых: велосипеды, картинг, волейбол.
                             </li>
-                            <li>Поездки на природу: однодневные на пляж, палаточные туры по Беларуси, рыбалка (рыбалка, если поместиться).</li>
-                            <li>Экстремальные дни: прыжки с парашюта, с вышек.</li>
+                            <li>Поездки на природу: однодневные на пляж, палаточные туры по Беларуси, рыбалка.</li>
+                            <li>Экстремальные дни: прыжки с парашютом, с вышек.</li>
                         </ul>
                     </div>
                 </div>
