--- a/src/template/base/head.html
+++ b/src/template/base/head.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="icon" type="image/gif" href="img/favicon.gif">-->
 
-    <meta name="robots" content="noindex,nofollow,noodp,noarchive,nosnippet" />
+    <!--<meta name="robots" content="noindex,nofollow,noodp,noarchive,nosnippet" />-->
 
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
