--- a/src/assets/style/layout/sections/_clubOrganizer.scss
+++ b/src/assets/style/layout/sections/_clubOrganizer.scss
@@ -71,19 +71,32 @@
     }
     
     .video {
-        margin-top: 5em;
+        margin: 5em 0;
         text-align: center;
         
         @media only screen and (max-width: 767px) {
-            margin-top: 2em;
+            margin: 2em 0;
         }
 
         @media only screen and (min-width: 768px) and (max-width: 991px) {
-            margin-top: 3em;
+            margin: 3em 0;
         }
 
         @media only screen and (min-width: 992px) and (max-width: 1199px) {
-            margin-top: 4em;
+            margin: 4em 0;
+        }
+    }
+
+    .btn {
+
+        &-main {
+            /*color: #ffd700;*/ /*#daa520*/
+            /*font-size: 1.5em;*/
+            font-size: $fz-button;
+
+            @media only screen and (max-width: 400px) {
+                font-size: 0.95em;
+            }
         }
     }
     
