--- a/src/template/layout/sections/clubOrganizer.html
+++ b/src/template/layout/sections/clubOrganizer.html
@@ -35,5 +35,13 @@
                 </div>
             </div>
         </div>
+        
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-center">
+                    <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="[организатор] Быть в клубе" role="button">Быть в клубе</button>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
