Убрал временную позицию (background-position-y: -x0px;) у блоков, у которых было это правило. Закоментил вывод в consol в функции js. Зацентрировал текст в схема в блоке инструментов результата. Добавил пробел между предлажениями в Окружении блока причины результата.

--- a/src/assets/style/layout/sections/_goose.scss
+++ b/src/assets/style/layout/sections/_goose.scss
@@ -2,5 +2,5 @@
 
 #goose {
     background-image: url('../img/goose/bg_1.jpg');
-    background-position-y: -70px; /* TEMP - обрезать фотки нужно.. ну или общее позиционирование делать.. */
+    /*background-position-y: -70px;*/ /* TEMP - обрезать фотки нужно.. ну или общее позиционирование делать.. */
 }
