--- a/src/assets/style/layout/sections/_clubProgram.scss
+++ b/src/assets/style/layout/sections/_clubProgram.scss
@@ -28,6 +28,10 @@
             margin-right: -31px;
             margin-top: 6.3em;
             padding: 2.8em 2em; /*1.5em*/
+            
+            @media only screen and (max-width: 767px) {
+                margin-top: 0;
+            }
     
             @media only screen and (max-width: 991px) {
                 margin-right: auto;
