--- a/src/assets/style/layout/sections/_provocation.scss
+++ b/src/assets/style/layout/sections/_provocation.scss
@@ -2,5 +2,5 @@
 
 #provocation {
     background-image: url('../img/provocation/bg_2.jpg');
-    background-position-y: -50px; /* TEMP - обрезать фотки нужно.. ну или общее позиционирование делать.. */
+    /*background-position-y: -50px;*/ /* TEMP - обрезать фотки нужно.. ну или общее позиционирование делать.. */
 }
